--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "gloudemans/shoppingcart": "^2.6",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-      "ext-mongodb": "*"
+        "stripe/stripe-php": "3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
